--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -330,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1104" y="-77"/>
+            <point key="canvasLocation" x="1102.5" y="-77.112676056338032"/>
         </scene>
         <!--Greeting View Controller-->
         <scene sceneID="eq2-nQ-eca">
